--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,8 @@
 {
   "tasks": {
-    "d1": "deno run -P day-1.ts"
-    "d1p2": "deno run -P day-1-part-2.ts"
+    "d1": "deno run -P day-1.ts",
+    "d1p2": "deno run -P day-1-part-2.ts",
+    "d2": "deno run -P day-2.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1"
