--- a/deno.json
+++ b/deno.json
@@ -2,7 +2,9 @@
   "tasks": {
     "d1": "deno run -P day-1.ts",
     "d1p2": "deno run -P day-1-part-2.ts",
-    "d2": "deno run -P day-2.ts"
+    "d2": "deno run -P day-2.ts",
+    "d2p2": "deno run -P day-2-part-2.ts"
+    "d3": "deno run -P day-3.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1"
